--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img.frame{
 }
 
 .info{
-  background-color: #af24f0;
+  background-color: #eed70a;
   padding: 20px;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -30,7 +30,7 @@ img.frame{
 .name{
   color: #af24f0;
 
-  margin-bottom: 10px;
+  margin-bottom: 666px;
   padding-bottom: 10px;
   font-size: 1.2em;
   border-bottom: 1px solid rgb(230, 179, 12);
