--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,7 +9,7 @@
 
 h1{
     font-size: 18px;
-    border-left: #e2970c solid 5px;
+    border-left: #0c8ce2 solid 5px;
     padding-left: 5px;
     margin-bottom:20px;
 }
@@ -87,12 +87,12 @@ header {
 
 #main_nav li a:hover,
 #main_nav li span{
-    color:#e2970c;
+    color:#0cdbe2;
     
 }
 
 #main_nav li span{
-    border-bottom: 3px solid #e2970c;
+    border-bottom: 3px solid #0cdbe2;
 }
 
 
@@ -186,7 +186,7 @@ body.index_page h1{
 footer
 ======================================================*/
 footer{
-    background-color: #555;
+    background-color: rgb(19, 171, 218);
     color:#fff;
     font-size: 80%;
     padding:10px;
